MOD: 类加载方法